// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FigureTileContent /> should render a figure tile content with alert headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.span
        isHeading={true}
        labelStyle="alert"
        textWidth={46}
      >
        1
      </styled.span>
      <styled.span
        isHeading={true}
        labelStyle="alert"
      >
        dummy heading
      </styled.span>
    </styled.div>
    <styled.div>
      <styled.span
        labelStyle="alert"
        textWidth={46}
      >
        35
      </styled.span>
      <styled.span
        labelStyle="alert"
      >
        dummy subheading
      </styled.span>
    </styled.div>
  </styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with heading only 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.span
        isHeading={true}
        labelStyle="none"
        textWidth={36}
      >
        1
      </styled.span>
      <styled.span
        isHeading={true}
        labelStyle="none"
      >
        dummy heading
      </styled.span>
    </styled.div>
    <styled.div />
  </styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with label 1`] = `
<styled.div>
  <styled.span>
    dummy label
  </styled.span>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with normal headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.span
        isHeading={true}
        labelStyle="none"
        textWidth={46}
      >
        1
      </styled.span>
      <styled.span
        isHeading={true}
        labelStyle="none"
      >
        dummy heading
      </styled.span>
    </styled.div>
    <styled.div>
      <styled.span
        labelStyle="none"
        textWidth={46}
      >
        35
      </styled.span>
      <styled.span
        labelStyle="none"
      >
        dummy subheading
      </styled.span>
    </styled.div>
  </styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with nothing 1`] = `
<styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with subheading only 1`] = `
<styled.div>
  <styled.div>
    <styled.div />
    <styled.div>
      <styled.span
        labelStyle="none"
        textWidth={46}
      >
        35
      </styled.span>
      <styled.span
        labelStyle="none"
      >
        dummy subheading
      </styled.span>
    </styled.div>
  </styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with success headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.span
        isHeading={true}
        labelStyle="success"
        textWidth={46}
      >
        1
      </styled.span>
      <styled.span
        isHeading={true}
        labelStyle="success"
      >
        dummy heading
      </styled.span>
    </styled.div>
    <styled.div>
      <styled.span
        labelStyle="success"
        textWidth={46}
      >
        35
      </styled.span>
      <styled.span
        labelStyle="success"
      >
        dummy subheading
      </styled.span>
    </styled.div>
  </styled.div>
  <div />
</styled.div>
`;

exports[`<FigureTileContent /> should render a figure tile content with warning headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.span
        isHeading={true}
        labelStyle="warning"
        textWidth={46}
      >
        1
      </styled.span>
      <styled.span
        isHeading={true}
        labelStyle="warning"
      >
        dummy heading
      </styled.span>
    </styled.div>
    <styled.div>
      <styled.span
        labelStyle="warning"
        textWidth={46}
      >
        35
      </styled.span>
      <styled.span
        labelStyle="warning"
      >
        dummy subheading
      </styled.span>
    </styled.div>
  </styled.div>
  <div />
</styled.div>
`;
